samples/_failures_safe/1761392563_943938_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60a42e23.c: In function ‘tokenize’:
./samples/SAFE/__tmp_60a42e23.c:167:5: error: expected declaration or statement at end of input
  167 |     if (token_count < max_tokens) {
      |     ^~
./samples/SAFE/__tmp_60a42e23.c:167:5: error: expected declaration or statement at end of input
